internal/controller/test_data/wms/patches/expected/middleware-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    pdok.nl/app: mapserver
    dataset: dataset
    dataset-owner: datasetOwner
    pdok.nl/inspire: "false"
    service-type: wms
    service-version: v1_0
  name: patches-wms-mapserver-headers
  namespace: default
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: WMS
      name: patches
      uid: ""
      blockOwnerDeletion: true
      controller: true
spec:
  headers:
    customResponseHeaders:
      Access-Control-Allow-Headers: Content-Type
      Access-Control-Allow-Method: GET, POST, OPTIONS
      Access-Control-Allow-Origin: '*'
      Cache-Control: public, max-age=3600, no-transform
